[Add] Overlay on small image (bug!)

--- a/assets/style.css
+++ b/assets/style.css
@@ -51,7 +51,7 @@ img {
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, 1);
+  background-color: rgba(0, 0, 0, 0.9);
   width: 100%;
   height: 300px;
   position: absolute;
